options page enhancements: * swapped JS alert dialogs w/ inline alert DIVs * replaced JS confirm dialog w/ `<dialog>` element (plus polyfill) * fixed actual settings (defaults) not showing after local storage reset

--- a/src/pages/options/options.scss
+++ b/src/pages/options/options.scss
@@ -1,3 +1,58 @@
+html {
+    min-width: 630px;
+}
+
+dialog {
+    position: fixed;
+    top: 50%;
+    transform: translate(0, -50%);
+
+    background: rgb(255, 255, 255);
+    border: none;
+
+    border-radius: 8px;
+
+    box-shadow: 0 12px 24px -4px rgba(50, 50, 50, 0.25),
+                0 8px 16px -8px rgba(0, 0, 0, 0.25);
+}
+
+dialog::backdrop,
+dialog+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.close {
+    opacity: 0.5;
+
+    cursor: pointer;
+    float: right;
+    font-size: 1.5rem;
+    line-height: 1;
+
+    &:hover {
+        opacity: 1;
+        text-decoration: none;
+    }
+}
+
+.alert {
+    position: relative;
+
+    .close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 1rem;
+        text-align: center;
+    }
+}
+
+
 
 /**
  * Firefox-Specific Overrides
